2012-02-26  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (+elementWithName:stringValue:): Correct
	recursive call.
	Patch by Ivan Vučica <ivucica@gmail.com>
	* Source/NSXMLElement.m: Add FIXME comments for name space methods.

2012-02-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLElement.m: Implement namespace methods.

2012-02-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (-_nodeFollowingInNaturalDirection:): Correct
	this method.
	* Source/NSXMLDocument.m,
	* Source/NSXMLElement.m: Clean up children methods.

2012-02-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m: Further clean up.
	* Source/NSXMLDTDNode.m (-initWithXMLString:): Move comment about
	missing code to here.
	* Source/NSXMLElement.m (-initWithName:stringValue:): Move subnode
	creation to here.

2012-02-21  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m: Clean up helper functions.

2012-02-20  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAffineTransform.m (-initWithCoder:, -encodeWithCoder:):
	Add key coding and decoding for NSAffineTransform.

2012-02-19 22:37-EST Gregory John Casamento <greg.casamento@gmail.com>
	Doug Simons <doug.simons@testplant.com>

	* Source/NSXMLDocument.m
	* Source/NSXMLDTD.m
	* Source/NSXMLDTDNode.m
	* Source/NSXMLElement.m
	* Source/NSXMLNode.m
	* Source/NSXMLPrivate.h: Reimplementation of all DOM classes based on
	libxml2.  Implementation of all methods using libxml2 functions.
	* Tests/base/NSXMLDocument/basic.m
	* Tests/base/NSXMLElement/attributes.m
	* Tests/base/NSXMLElement/children.m
	* Tests/base/NSXMLNode/basic.m
	* Tests/base/NSXMLNode/children.m
	* Tests/base/NSXMLNode/kinds.m: Changes to test for new functionality.

2012-02-08  Lubomir Rintel <lubo.rintel@gooddata.com>

	* Source/NSHTTPCookie.m:
	* Source/NSHTTPCookieStorage.m:
	* Source/NSURLConnection.m:
	* Source/NSURLProtocol.m:
	* Source/NSURLRequest.m:
	Enable the use of cookies by default ... addse setting of cookies